--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
   <head>
     <meta charset="utf-8">
     <title>Tushar Khatri</title>
+    <link rel="stylesheet" href="css/styles.css">
   </head>
+
+
+
   <body>
     <table cellspacing="20">
       <tr>
